# cab-rental-system

./: .env.local  Jenkinsfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3bcc691b66e3_add_tables_for_cab_rental_system.py  e6a89809adeb_create_customers_table.py
app/: config.py  models.py
